// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Process details page milestones panel Snapshot test with default props 1`] = `
<ProcessDetailsMilestonesPanel
  milestones={
    Array [
      Object {
        "__typename": "Milestones",
        "id": "27107f38-d888-4edf-9a4f-11b9e6d75m36",
        "name": "Milestone 1: Order placed",
        "status": "ACTIVE",
      },
      Object {
        "__typename": "Milestones",
        "id": "27107f38-d888-4edf-9a4f-11b9e6d75m66",
        "name": "Milestone 2: Order shipped",
        "status": "AVAILABLE",
      },
      Object {
        "__typename": "Milestones",
        "id": "27107f38-d888-4edf-9a4f-11b9e6d75m88",
        "name": "Milestone 3: Order delivered and closed with customer sign off",
        "status": "AVAILABLE",
      },
      Object {
        "__typename": "Milestones",
        "id": "27107f38-d888-4edf-9a4f-11b9e6d75i86",
        "name": "Manager decision",
        "status": "COMPLETED",
      },
    ]
  }
>
  <Card
    data-ouia-component-type="milestones"
    data-ouia-safe={true}
  >
    <article
      className="pf-c-card"
      data-ouia-component-id="OUIA-Generated-Card-1"
      data-ouia-component-type="PF4/Card"
      data-ouia-safe={true}
      id=""
    >
      <CardHeader>
        <div
          className="pf-c-card__header"
        >
          <Title
            headingLevel="h3"
            size="xl"
          >
            <h3
              className="pf-c-title pf-m-xl"
              data-ouia-component-id="OUIA-Generated-Title-1"
              data-ouia-component-type="PF4/Title"
              data-ouia-safe={true}
            >
              Milestones
            </h3>
          </Title>
        </div>
      </CardHeader>
      <CardBody>
        <div
          className="pf-c-card__body"
        >
          <TextContent
            className="kogito-process-details--milestones__nameText"
          >
            <div
              className="pf-c-content kogito-process-details--milestones__nameText"
            >
              <Text
                component="p"
                key="0"
              >
                <p
                  className=""
                  data-ouia-component-id="OUIA-Generated-Text-1"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe={true}
                  data-pf-content={true}
                >
                  Milestone 1: Order placed
                   
                  <Label
                    color="blue"
                    icon={
                      <InfoCircleIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                      />
                    }
                  >
                    <span
                      className="pf-c-label pf-m-blue"
                    >
                      <span
                        className="pf-c-label__content"
                      >
                        <span
                          className="pf-c-label__icon"
                        >
                          <InfoCircleIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                Object {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 512 512"
                              width="1em"
                            >
                              <path
                                d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                              />
                            </svg>
                          </InfoCircleIcon>
                        </span>
                        Active
                      </span>
                    </span>
                  </Label>
                </p>
              </Text>
              <Text
                component="p"
                key="1"
              >
                <p
                  className=""
                  data-ouia-component-id="OUIA-Generated-Text-2"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe={true}
                  data-pf-content={true}
                >
                  Milestone 2: Order shipped
                   
                  <Label
                    icon={
                      <InfoCircleIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                      />
                    }
                  >
                    <span
                      className="pf-c-label"
                    >
                      <span
                        className="pf-c-label__content"
                      >
                        <span
                          className="pf-c-label__icon"
                        >
                          <InfoCircleIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                Object {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 512 512"
                              width="1em"
                            >
                              <path
                                d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                              />
                            </svg>
                          </InfoCircleIcon>
                        </span>
                        Available
                      </span>
                    </span>
                  </Label>
                </p>
              </Text>
              <Tooltip
                content="Milestone 3: Order delivered and closed with customer sign off"
                key="2"
              >
                <Popper
                  appendTo={[Function]}
                  distance={15}
                  enableFlip={true}
                  flipBehavior={
                    Array [
                      "top",
                      "right",
                      "bottom",
                      "left",
                      "top",
                      "right",
                      "bottom",
                    ]
                  }
                  isVisible={false}
                  onBlur={[Function]}
                  onDocumentClick={false}
                  onDocumentKeyDown={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onPopperMouseEnter={[Function]}
                  onPopperMouseLeave={[Function]}
                  onTriggerEnter={[Function]}
                  placement="top"
                  popper={
                    <div
                      aria-live="off"
                      className="pf-c-tooltip"
                      id="pf-tooltip-1"
                      role="tooltip"
                      style={
                        Object {
                          "maxWidth": null,
                          "opacity": 0,
                          "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
                        }
                      }
                    >
                      <TooltipArrow />
                      <TooltipContent
                        isLeftAligned={false}
                      >
                        Milestone 3: Order delivered and closed with customer sign off
                      </TooltipContent>
                    </div>
                  }
                  popperMatchesTriggerWidth={false}
                  positionModifiers={
                    Object {
                      "bottom": "pf-m-bottom",
                      "bottom-end": "pf-m-bottom-right",
                      "bottom-start": "pf-m-bottom-left",
                      "left": "pf-m-left",
                      "left-end": "pf-m-left-bottom",
                      "left-start": "pf-m-left-top",
                      "right": "pf-m-right",
                      "right-end": "pf-m-right-bottom",
                      "right-start": "pf-m-right-top",
                      "top": "pf-m-top",
                      "top-end": "pf-m-top-right",
                      "top-start": "pf-m-top-left",
                    }
                  }
                  removeFindDomNode={false}
                  trigger={
                    <Text
                      component="p"
                    >
                      <span
                        className="kogito-process-details--milestones__nameTextEllipses"
                      >
                        Milestone 3: Order delivered and closed with customer sign off
                      </span>
                       
                      <Label
                        icon={
                          <InfoCircleIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                          />
                        }
                      >
                        Available
                      </Label>
                    </Text>
                  }
                  zIndex={9999}
                >
                  <FindRefWrapper
                    onFoundRef={[Function]}
                  >
                    <Text
                      component="p"
                    >
                      <p
                        className=""
                        data-ouia-component-id="OUIA-Generated-Text-3"
                        data-ouia-component-type="PF4/Text"
                        data-ouia-safe={true}
                        data-pf-content={true}
                      >
                        <span
                          className="kogito-process-details--milestones__nameTextEllipses"
                        >
                          Milestone 3: Order delivered and closed with customer sign off
                        </span>
                         
                        <Label
                          icon={
                            <InfoCircleIcon
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                            />
                          }
                        >
                          <span
                            className="pf-c-label"
                          >
                            <span
                              className="pf-c-label__content"
                            >
                              <span
                                className="pf-c-label__icon"
                              >
                                <InfoCircleIcon
                                  color="currentColor"
                                  noVerticalAlign={false}
                                  size="sm"
                                >
                                  <svg
                                    aria-hidden={true}
                                    aria-labelledby={null}
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    style={
                                      Object {
                                        "verticalAlign": "-0.125em",
                                      }
                                    }
                                    viewBox="0 0 512 512"
                                    width="1em"
                                  >
                                    <path
                                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                                    />
                                  </svg>
                                </InfoCircleIcon>
                              </span>
                              Available
                            </span>
                          </span>
                        </Label>
                      </p>
                    </Text>
                  </FindRefWrapper>
                </Popper>
              </Tooltip>
              <Text
                component="blockquote"
                key="3"
              >
                <blockquote
                  className=""
                  data-ouia-component-id="OUIA-Generated-Text-4"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe={true}
                  data-pf-content={true}
                >
                  Manager decision
                   
                  <Label
                    color="green"
                    icon={
                      <InfoCircleIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                      />
                    }
                  >
                    <span
                      className="pf-c-label pf-m-green"
                    >
                      <span
                        className="pf-c-label__content"
                      >
                        <span
                          className="pf-c-label__icon"
                        >
                          <InfoCircleIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                Object {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 512 512"
                              width="1em"
                            >
                              <path
                                d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                              />
                            </svg>
                          </InfoCircleIcon>
                        </span>
                        Completed
                      </span>
                    </span>
                  </Label>
                </blockquote>
              </Text>
            </div>
          </TextContent>
        </div>
      </CardBody>
    </article>
  </Card>
</ProcessDetailsMilestonesPanel>
`;

exports[`Process details page milestones panel test assertions 1`] = `
<ProcessDetailsMilestonesPanel
  milestones={
    Array [
      Object {
        "__typename": "Milestones",
        "id": "27107f38-d888-4edf-9a4f-11b9e6d75m36",
        "name": "Milestone 1: Order placed",
        "status": "ACTIVE",
      },
      Object {
        "__typename": "Milestones",
        "id": "27107f38-d888-4edf-9a4f-11b9e6d75m66",
        "name": "Milestone 2: Order shipped",
        "status": "AVAILABLE",
      },
      Object {
        "__typename": "Milestones",
        "id": "27107f38-d888-4edf-9a4f-11b9e6d75m88",
        "name": "Milestone 3: Order delivered",
        "status": "AVAILABLE",
      },
      Object {
        "__typename": "Milestones",
        "id": "27107f38-d888-4edf-9a4f-11b9e6d75m66",
        "name": "Milestone 2: Order shipped",
        "status": "AVAILABLE",
      },
      Object {
        "__typename": "Milestones",
        "id": "27107f38-d888-4edf-9a4f-11b9e6d75i86",
        "name": "Milestone 3: Order delivered and closed with customer sign off",
        "status": "COMPLETED",
      },
      Object {
        "__typename": "Milestones",
        "id": "27107f38-d888-4edf-9a4f-11b9e6d75m66",
        "name": "Milestone 2: Order shipped",
        "status": undefined,
      },
    ]
  }
>
  <Card
    data-ouia-component-type="milestones"
    data-ouia-safe={true}
  >
    <article
      className="pf-c-card"
      data-ouia-component-id="OUIA-Generated-Card-2"
      data-ouia-component-type="PF4/Card"
      data-ouia-safe={true}
      id=""
    >
      <CardHeader>
        <div
          className="pf-c-card__header"
        >
          <Title
            headingLevel="h3"
            size="xl"
          >
            <h3
              className="pf-c-title pf-m-xl"
              data-ouia-component-id="OUIA-Generated-Title-2"
              data-ouia-component-type="PF4/Title"
              data-ouia-safe={true}
            >
              Milestones
            </h3>
          </Title>
        </div>
      </CardHeader>
      <CardBody>
        <div
          className="pf-c-card__body"
        >
          <TextContent
            className="kogito-process-details--milestones__nameText"
          >
            <div
              className="pf-c-content kogito-process-details--milestones__nameText"
            >
              <Text
                component="p"
                key="0"
              >
                <p
                  className=""
                  data-ouia-component-id="OUIA-Generated-Text-5"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe={true}
                  data-pf-content={true}
                >
                  Milestone 1: Order placed
                   
                  <Label
                    color="blue"
                    icon={
                      <InfoCircleIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                      />
                    }
                  >
                    <span
                      className="pf-c-label pf-m-blue"
                    >
                      <span
                        className="pf-c-label__content"
                      >
                        <span
                          className="pf-c-label__icon"
                        >
                          <InfoCircleIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                Object {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 512 512"
                              width="1em"
                            >
                              <path
                                d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                              />
                            </svg>
                          </InfoCircleIcon>
                        </span>
                        Active
                      </span>
                    </span>
                  </Label>
                </p>
              </Text>
              <Text
                component="p"
                key="1"
              >
                <p
                  className=""
                  data-ouia-component-id="OUIA-Generated-Text-6"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe={true}
                  data-pf-content={true}
                >
                  Milestone 2: Order shipped
                   
                  <Label
                    icon={
                      <InfoCircleIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                      />
                    }
                  >
                    <span
                      className="pf-c-label"
                    >
                      <span
                        className="pf-c-label__content"
                      >
                        <span
                          className="pf-c-label__icon"
                        >
                          <InfoCircleIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                Object {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 512 512"
                              width="1em"
                            >
                              <path
                                d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                              />
                            </svg>
                          </InfoCircleIcon>
                        </span>
                        Available
                      </span>
                    </span>
                  </Label>
                </p>
              </Text>
              <Text
                component="p"
                key="2"
              >
                <p
                  className=""
                  data-ouia-component-id="OUIA-Generated-Text-7"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe={true}
                  data-pf-content={true}
                >
                  Milestone 3: Order delivered
                   
                  <Label
                    icon={
                      <InfoCircleIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                      />
                    }
                  >
                    <span
                      className="pf-c-label"
                    >
                      <span
                        className="pf-c-label__content"
                      >
                        <span
                          className="pf-c-label__icon"
                        >
                          <InfoCircleIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                Object {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 512 512"
                              width="1em"
                            >
                              <path
                                d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                              />
                            </svg>
                          </InfoCircleIcon>
                        </span>
                        Available
                      </span>
                    </span>
                  </Label>
                </p>
              </Text>
              <Text
                component="p"
                key="3"
              >
                <p
                  className=""
                  data-ouia-component-id="OUIA-Generated-Text-8"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe={true}
                  data-pf-content={true}
                >
                  Milestone 2: Order shipped
                   
                  <Label
                    icon={
                      <InfoCircleIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                      />
                    }
                  >
                    <span
                      className="pf-c-label"
                    >
                      <span
                        className="pf-c-label__content"
                      >
                        <span
                          className="pf-c-label__icon"
                        >
                          <InfoCircleIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                Object {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 512 512"
                              width="1em"
                            >
                              <path
                                d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                              />
                            </svg>
                          </InfoCircleIcon>
                        </span>
                        Available
                      </span>
                    </span>
                  </Label>
                </p>
              </Text>
              <Tooltip
                content="Milestone 3: Order delivered and closed with customer sign off"
                key="4"
              >
                <Popper
                  appendTo={[Function]}
                  distance={15}
                  enableFlip={true}
                  flipBehavior={
                    Array [
                      "top",
                      "right",
                      "bottom",
                      "left",
                      "top",
                      "right",
                      "bottom",
                    ]
                  }
                  isVisible={false}
                  onBlur={[Function]}
                  onDocumentClick={false}
                  onDocumentKeyDown={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onPopperMouseEnter={[Function]}
                  onPopperMouseLeave={[Function]}
                  onTriggerEnter={[Function]}
                  placement="top"
                  popper={
                    <div
                      aria-live="off"
                      className="pf-c-tooltip"
                      id="pf-tooltip-2"
                      role="tooltip"
                      style={
                        Object {
                          "maxWidth": null,
                          "opacity": 0,
                          "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
                        }
                      }
                    >
                      <TooltipArrow />
                      <TooltipContent
                        isLeftAligned={false}
                      >
                        Milestone 3: Order delivered and closed with customer sign off
                      </TooltipContent>
                    </div>
                  }
                  popperMatchesTriggerWidth={false}
                  positionModifiers={
                    Object {
                      "bottom": "pf-m-bottom",
                      "bottom-end": "pf-m-bottom-right",
                      "bottom-start": "pf-m-bottom-left",
                      "left": "pf-m-left",
                      "left-end": "pf-m-left-bottom",
                      "left-start": "pf-m-left-top",
                      "right": "pf-m-right",
                      "right-end": "pf-m-right-bottom",
                      "right-start": "pf-m-right-top",
                      "top": "pf-m-top",
                      "top-end": "pf-m-top-right",
                      "top-start": "pf-m-top-left",
                    }
                  }
                  removeFindDomNode={false}
                  trigger={
                    <Text
                      component="blockquote"
                    >
                      <span
                        className="kogito-process-details--milestones__nameTextEllipses"
                      >
                        Milestone 3: Order delivered and closed with customer sign off
                      </span>
                       
                      <Label
                        color="green"
                        icon={
                          <InfoCircleIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                          />
                        }
                      >
                        Completed
                      </Label>
                    </Text>
                  }
                  zIndex={9999}
                >
                  <FindRefWrapper
                    onFoundRef={[Function]}
                  >
                    <Text
                      component="blockquote"
                    >
                      <blockquote
                        className=""
                        data-ouia-component-id="OUIA-Generated-Text-9"
                        data-ouia-component-type="PF4/Text"
                        data-ouia-safe={true}
                        data-pf-content={true}
                      >
                        <span
                          className="kogito-process-details--milestones__nameTextEllipses"
                        >
                          Milestone 3: Order delivered and closed with customer sign off
                        </span>
                         
                        <Label
                          color="green"
                          icon={
                            <InfoCircleIcon
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                            />
                          }
                        >
                          <span
                            className="pf-c-label pf-m-green"
                          >
                            <span
                              className="pf-c-label__content"
                            >
                              <span
                                className="pf-c-label__icon"
                              >
                                <InfoCircleIcon
                                  color="currentColor"
                                  noVerticalAlign={false}
                                  size="sm"
                                >
                                  <svg
                                    aria-hidden={true}
                                    aria-labelledby={null}
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    style={
                                      Object {
                                        "verticalAlign": "-0.125em",
                                      }
                                    }
                                    viewBox="0 0 512 512"
                                    width="1em"
                                  >
                                    <path
                                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                                    />
                                  </svg>
                                </InfoCircleIcon>
                              </span>
                              Completed
                            </span>
                          </span>
                        </Label>
                      </blockquote>
                    </Text>
                  </FindRefWrapper>
                </Popper>
              </Tooltip>
              <Text
                component="p"
                key="5"
              >
                <p
                  className=""
                  data-ouia-component-id="OUIA-Generated-Text-10"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe={true}
                  data-pf-content={true}
                >
                  Milestone 2: Order shipped
                   
                </p>
              </Text>
            </div>
          </TextContent>
        </div>
      </CardBody>
    </article>
  </Card>
</ProcessDetailsMilestonesPanel>
`;
